syntax = "proto3";

package product;

option go_package = "./";

service ProductService{
  rpc GetProducts(Empty) returns (Products);
  rpc GetProduct(Id) returns (Product);
  rpc CreateProduct(Product) returns (Id);
  rpc UpdateProduct(Product) returns (Status);
  rpc DeleteProduct(Id) returns (Status);
}

message Empty{};

message Products{
  Pagination pagination = 1;
  repeated Product data = 2;
}

message Product{
  int32 id = 1;
  string name = 2;
  double price = 3;
  int32 stock = 4;
  Category category = 5;
}

message Category{
  int32 id = 1;
  string name = 2;
}

message Id{
  int32 id = 1;
}

message Status{
  int32 status = 1;
}

message Pagination {
  int64 total = 1;
  int64 per_page = 2;
  int64 current_page = 3;
  int64 last_page = 4;
}
